# personal_ai_productivity_tools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily_ai_papers.yml  daily_python_open_source_repositories.yml  pr_agent.yml
py/: send_email.py  use_gcp_storage.py  utils.py
py/jobs/: daily_ai_papers.py  daily_python_open_source_repositories.py
py/llm_request/: request_gemini.py
py/prompts/: daily_ai_paper.py  daily_python_open_source_repositories.py
