[project]
name = "personal-ai-productivity-tools"
version = "0.1.0"
description = "Personal AI productivity tools for daily tasks"
requires-python = ">=3.13"
dependencies = [
    "google-generativeai==0.8.5",
    "google-cloud-storage==3.2.0",
    "resend==2.11.0",
    "PyYAML==6.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["py"] 